# flash_cards

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: initial_data.yaml
src/: __init__.py  __version__.py  cli.py  database.py  generator.py  populate_data.py
tests/: test_cli_e2e.py
